2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.IO.IsolatedStorage/IsolatedStorageSettingsTest.cs:
	Add MoonlightBug for a known regression.

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Add an extra check
	  to FE.DataContext to make sure it really is a core property.

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* moon-unit.csproj: Updated.

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.Browser/ScriptableTest.cs: Move initialization
	to ctor.

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Update test
	  slightly

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Add a test showing
	  that 'core' types don't preserve the object reference when
	  marshalling to/from native but custom types do.

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: A custom
	  registered dependencyproperty keeps the same object
	  reference when marshalling a string.

2009-07-22  Andreia Gaita  <avidigal@novell.com>

	* System.Windows.Browser/ScriptableTest.cs: reactivate scriptable
	tests, the bots should run them fine now.

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs: Add an extra test to
	  see if the object reference is always preserved

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.Browser/ScriptableTest.cs: Added.

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* site/test.html:
	* site/index.html: Add a big fat warning that these two files
	should be almost identical. Also make these files as identical
	as possible.

2009-07-21  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Add test for
	  setting ItemsControl.ItemsSource through xaml.

2009-07-21  Alan McGovern  <amcgovern@novell.com>

	* moon-unit.mdp: