@@ -43,6 +43,60 @@ namespace MoonTest.System.Windows.Controls {
 	[TestClass]
 	public partial class ScrollViewerTest : SilverlightTest {
 
+		public class TestScrollViewer
+		{
+			public ScrollBar HorizontalScrollbar {
+				get { return Find <ScrollBar> (ScrollViewer, "HorizontalScrollBar"); }
+			}
+
+			public Thumb HorizontalThumb {
+				get { return Find<Thumb> (HorizontalScrollbar, "HorizontalThumb"); }
+			}
+
+			public ScrollViewer ScrollViewer {
+				get; private set;
+			}
+
+			public ScrollContentPresenter ScrollPresenter {
+				get { return Find <ScrollContentPresenter> (ScrollViewer, "ScrollContentPresenter"); }
+			}
+
+			public ScrollBar VerticalScrollbar {
+				get { return Find<ScrollBar> (ScrollViewer, "VerticalScrollBar"); }
+			}
+
+			public Thumb VerticalThumb {
+				get { return Find<Thumb> (VerticalScrollbar, "VerticalThumb"); }
+			}
+
+			public TestScrollViewer ()
+			{
+				ScrollViewer = new ScrollViewer ();
+			}
+
+			public TestScrollViewer (int width, int height)
+			{
+				ScrollViewer = new ScrollViewer { Width = width, Height = height };
+			}
+
+			T Find<T> (DependencyObject o, string name)
+				where T : FrameworkElement
+			{
+				for (int i = 0; i < VisualTreeHelper.GetChildrenCount (o); i++) {
+					FrameworkElement e = VisualTreeHelper.GetChild (o, i) as FrameworkElement;
+					if (e == null)
+						continue;
+					if (e.Name == name)
+						return e as T;
+
+					object child = Find<T> (e, name);
+					if (child != null)
+						return (T)child;
+				}
+				return null;
+			}
+		}
+
 		[TestMethod]
 		[Asynchronous]
 		public void AfterRender ()
@@ -63,7 +117,74 @@ namespace MoonTest.System.Windows.Controls {
 				Assert.IsTrue (grid.Children [3] is ScrollBar, "#7");
 			});
 		}
-		
+
+		[TestMethod]
+		[Asynchronous]
+		public void ExtentHeightWidthTest ()
+		{
+			TestScrollViewer t = new TestScrollViewer ();
+			t.ScrollViewer.Content = new Canvas {
+				Width = 60,
+				Height = 100,
+				Background = new SolidColorBrush (Colors.Red)
+			};
+			CreateAsyncTest (t.ScrollViewer,
+				() => t.ScrollViewer.ApplyTemplate (),
+				() => Assert.AreEqual (100, t.ScrollViewer.ExtentHeight, "#1"),
+				() => Assert.AreEqual (60, t.ScrollViewer.ExtentWidth, "#2")
+			);
+		}
+
+		[TestMethod]
+		[Asynchronous]
+		public void ExtentHeightWidthTest2 ()
+		{
+			TestScrollViewer t = new TestScrollViewer (100, 100);
+			t.ScrollViewer.HorizontalScrollBarVisibility = ScrollBarVisibility.Auto;
+			t.ScrollViewer.Content = new Canvas {
+				Width = 60,
+				Height = 100,
+				Background = new SolidColorBrush (Colors.Red)
+			};
+			CreateAsyncTest (t.ScrollViewer,
+				() => t.ScrollViewer.ApplyTemplate (),
+				() => Assert.AreEqual (100, t.ScrollViewer.ExtentHeight, "#1"),
+				() => Assert.AreEqual (60, t.ScrollViewer.ExtentWidth, "#2")
+			);
+		}
+
+		[TestMethod]
+		[Asynchronous]
+		public void ExtentHeightWidthTest3 ()
+		{
+			StackPanel panel = new StackPanel ();
+			panel.Children.Add (new Rectangle { Width = 100, Height = 60 });
+			panel.Children.Add (new Rectangle { Width = 110, Height = 70});
+
+			TestScrollViewer t = new TestScrollViewer ();
+			t.ScrollViewer.Content = panel;
+
+			CreateAsyncTest (t.ScrollViewer,
+				() => t.ScrollViewer.ApplyTemplate (),
+				() => {
+					// Check that the desired size is what is used for the Extents
+					Assert.AreEqual (130, t.ScrollViewer.ExtentHeight, "#1");
+					Assert.AreEqual (110, t.ScrollViewer.ExtentWidth, "#2");
+					Assert.AreEqual (new Size (110, 130), panel.DesiredSize, "#3");
+
+					// And that the Presenter shows the same limits
+					Assert.AreEqual (130, t.ScrollPresenter.ExtentHeight, "#4");
+					Assert.AreEqual (110, t.ScrollPresenter.ExtentWidth, "#5");
+				}, () => {
+					// Resize the element and check the changes
+					panel.Width = 1000;
+				}, () => {
+					Assert.AreEqual (1000, t.ScrollViewer.ExtentWidth, "#6");
+					Assert.AreEqual (1000, t.ScrollPresenter.ExtentWidth, "#6");
+				}
+			);
+		}
+
 		[TestMethod]
 		public void ReadOnlyProperties ()
 		{
@@ -170,6 +291,32 @@ namespace MoonTest.System.Windows.Controls {
 			RowDefinition rd = new RowDefinition ();
 			ScrollViewer.SetHorizontalScrollBarVisibility (rd, bad);
 			ScrollViewer.SetVerticalScrollBarVisibility (rd, bad);
+		}
+
+		[TestMethod]
+		[Asynchronous]
+		public void ThumbResizes ()
+		{
+			Rectangle r  = new Rectangle { Width = 700, Height = 500, Fill = new SolidColorBrush (Colors.Red) };
+			TestScrollViewer t = new TestScrollViewer (200, 200);
+			t.ScrollViewer.HorizontalScrollBarVisibility = ScrollBarVisibility.Visible;
+			t.ScrollViewer.VerticalScrollBarVisibility = ScrollBarVisibility.Visible;
+
+			t.ScrollViewer.Content = r;
+
+			CreateAsyncTest (t.ScrollViewer,
+				() => t.ScrollViewer.ApplyTemplate (),
+				() => {
+					Assert.IsBetween(50, 51, t.VerticalThumb.Height, "#1");
+					Assert.IsBetween (36, 37, t.HorizontalThumb.Width, "#2");
+				}, () => {
+					r.Width = 400;
+					r.Height = 250;
+				}, () => {
+					Assert.IsBetween (101, 102, t.VerticalThumb.Height, "#3");
+					Assert.IsBetween (63, 64, t.HorizontalThumb.Width, "#4");
+				}
+			);
 		}
 	}
 }
