@@ -1,3 +1,8 @@
+2009-07-23  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/ScrollViewerTest.cs: Add the
+	  moonunit tests for the recent scrollviewer modifications
+
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* System.IO.IsolatedStorage/IsolatedStorageSettingsTest.cs:
